{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 1009,
  "lineage": "a4c5099b-dfb7-92fe-c8ea-836af38fff7f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastionserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0dba2cb6798deb6d8",
            "arn": "arn:aws:ec2:us-east-1:060377381042:instance/i-0d74d1d1d20611703",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d74d1d1d20611703",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "project",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-07326a0c2867496f0",
            "private_dns": "ip-172-16-39-161.ec2.internal",
            "private_ip": "172.16.39.161",
            "public_dns": "ec2-3-237-62-239.compute-1.amazonaws.com",
            "public_ip": "3.237.62.239",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-00f1420055fc49630",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0425b3d2a3a9a0c4e",
            "tags": {
              "Name": "Bastion"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05dc1411dcb50a740"
            ]
          },
          "dependencies": [
            "aws_security_group.ha_wp_bastion",
            "aws_subnet.ha_wp_pub1",
            "aws_vpc.hawp",
            "random_shuffle.ha_sub_pub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:060377381042:internet-gateway/igw-0f92533d7155e97c0",
            "id": "igw-0f92533d7155e97c0",
            "owner_id": "060377381042",
            "tags": {
              "Name": "ha_wp_igw"
            },
            "vpc_id": "vpc-075b39eab39fc4cb5"
          },
          "dependencies": [
            "aws_vpc.hawp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "hawordpress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:060377381042:loadbalancer/app/hawordpress/22d9d77c95c02594",
            "arn_suffix": "app/hawordpress/22d9d77c95c02594",
            "dns_name": "hawordpress-284148609.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:060377381042:loadbalancer/app/hawordpress/22d9d77c95c02594",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "hawordpress",
            "security_groups": [
              "sg-08ae1ac03b168b4cd"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03209511b13e03db5"
              },
              {
                "subnet_id": "subnet-0425b3d2a3a9a0c4e"
              },
              {
                "subnet_id": "subnet-0861e15df746d7dfe"
              }
            ],
            "subnets": [
              "subnet-03209511b13e03db5",
              "subnet-0425b3d2a3a9a0c4e",
              "subnet-0861e15df746d7dfe"
            ],
            "tags": {
              "Environment": "production"
            },
            "vpc_id": "vpc-075b39eab39fc4cb5",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.ha_wp_bastion",
            "aws_security_group.ha_wp_site",
            "aws_subnet.ha_wp_pub1",
            "aws_subnet.ha_wp_pub2",
            "aws_subnet.ha_wp_pub3",
            "aws_vpc.hawp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "hawpslave01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:060377381042:listener/app/hawordpress/22d9d77c95c02594/b88aefcfc45190d3",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:060377381042:targetgroup/hawpslave/b34a001973fe5a3a",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:060377381042:listener/app/hawordpress/22d9d77c95c02594/b88aefcfc45190d3",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:060377381042:loadbalancer/app/hawordpress/22d9d77c95c02594",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_lb.hawordpress",
            "aws_lb_target_group.hawpslave",
            "aws_security_group.ha_wp_bastion",
            "aws_security_group.ha_wp_site",
            "aws_subnet.ha_wp_pub1",
            "aws_subnet.ha_wp_pub2",
            "aws_subnet.ha_wp_pub3",
            "aws_vpc.hawp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:060377381042:targetgroup/hawpmaster/9d7aad1ef5734132",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:060377381042:listener-rule/app/hawordpress/22d9d77c95c02594/b88aefcfc45190d3/7d25763d0a68178b",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/wp-admin/*",
                      "/wp-login.php"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:060377381042:listener-rule/app/hawordpress/22d9d77c95c02594/b88aefcfc45190d3/7d25763d0a68178b",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:060377381042:listener/app/hawordpress/22d9d77c95c02594/b88aefcfc45190d3",
            "priority": 2
          },
          "dependencies": [
            "aws_lb.hawordpress",
            "aws_lb_listener.hawpslave01",
            "aws_lb_target_group.hawpmaster",
            "aws_lb_target_group.hawpslave",
            "aws_security_group.ha_wp_bastion",
            "aws_security_group.ha_wp_site",
            "aws_subnet.ha_wp_pub1",
            "aws_subnet.ha_wp_pub2",
            "aws_subnet.ha_wp_pub3",
            "aws_vpc.hawp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "hawpmaster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:060377381042:targetgroup/hawpmaster/9d7aad1ef5734132",
            "arn_suffix": "targetgroup/hawpmaster/9d7aad1ef5734132",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/wp-admin/healthcheck.html",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:060377381042:targetgroup/hawpmaster/9d7aad1ef5734132",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "hawpmaster",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-075b39eab39fc4cb5"
          },
          "dependencies": [
            "aws_vpc.hawp"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "hawpslave",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:060377381042:targetgroup/hawpslave/b34a001973fe5a3a",
            "arn_suffix": "targetgroup/hawpslave/b34a001973fe5a3a",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/healthcheck.html",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:060377381042:targetgroup/hawpslave/b34a001973fe5a3a",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "hawpslave",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-075b39eab39fc4cb5"
          },
          "dependencies": [
            "aws_vpc.hawp"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ha_rtb_priv",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0ddae57871041dacd",
            "owner_id": "060377381042",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "ha_rtb_priv"
            },
            "vpc_id": "vpc-075b39eab39fc4cb5"
          },
          "dependencies": [
            "aws_vpc.hawp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ha_rtb_pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0df9b0e62a2d4bab6",
            "owner_id": "060377381042",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f92533d7155e97c0",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ha_rtb_pub"
            },
            "vpc_id": "vpc-075b39eab39fc4cb5"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.hawp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtb_sub_priv",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09ddbd57b45da64a9",
            "route_table_id": "rtb-0ddae57871041dacd",
            "subnet_id": "subnet-0ca916868b05ff144"
          },
          "dependencies": [
            "aws_route_table.ha_rtb_priv",
            "aws_subnet.ha_wp_priv1",
            "aws_vpc.hawp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtb_sub_priv2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00e4986a45655a6db",
            "route_table_id": "rtb-0ddae57871041dacd",
            "subnet_id": "subnet-038953b690aab0708"
          },
          "dependencies": [
            "aws_route_table.ha_rtb_priv",
            "aws_subnet.ha_wp_priv2",
            "aws_vpc.hawp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtb_sub_priv3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-084fbaf4e3d8826e1",
            "route_table_id": "rtb-0ddae57871041dacd",
            "subnet_id": "subnet-035a8ffcb7223c255"
          },
          "dependencies": [
            "aws_route_table.ha_rtb_priv",
            "aws_subnet.ha_wp_priv3",
            "aws_vpc.hawp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtb_sub_pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08cc84ba9e12cf51c",
            "route_table_id": "rtb-0df9b0e62a2d4bab6",
            "subnet_id": "subnet-0425b3d2a3a9a0c4e"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.ha_rtb_pub",
            "aws_subnet.ha_wp_pub1",
            "aws_vpc.hawp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtb_sub_pub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a8a483dffe39c56b",
            "route_table_id": "rtb-0df9b0e62a2d4bab6",
            "subnet_id": "subnet-0861e15df746d7dfe"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.ha_rtb_pub",
            "aws_subnet.ha_wp_pub2",
            "aws_vpc.hawp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtb_sub_pub3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c32b55bcb52b78b6",
            "route_table_id": "rtb-0df9b0e62a2d4bab6",
            "subnet_id": "subnet-03209511b13e03db5"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.ha_rtb_pub",
            "aws_subnet.ha_wp_pub3",
            "aws_vpc.hawp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ha_wp_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:060377381042:security-group/sg-05dc1411dcb50a740",
            "description": "Allow Apache inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05dc1411dcb50a740",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "allow Apache ports",
            "name_prefix": "",
            "owner_id": "060377381042",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ha_wp_bastion"
            },
            "timeouts": null,
            "vpc_id": "vpc-075b39eab39fc4cb5"
          },
          "dependencies": [
            "aws_vpc.hawp"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ha_wp_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:060377381042:security-group/sg-0bed59e8f1fd9d93d",
            "description": "Allow DB inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bed59e8f1fd9d93d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "DB from Website",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08ae1ac03b168b4cd"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "ha_wp_db",
            "name_prefix": "",
            "owner_id": "060377381042",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ha_wp_db"
            },
            "timeouts": null,
            "vpc_id": "vpc-075b39eab39fc4cb5"
          },
          "dependencies": [
            "aws_security_group.ha_wp_bastion",
            "aws_security_group.ha_wp_site",
            "aws_vpc.hawp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ha_wp_efs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:060377381042:security-group/sg-07ca2dbd927215a71",
            "description": "Allow EFS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07ca2dbd927215a71",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "EFS from Website",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05dc1411dcb50a740"
                ],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "ha_wp_efs",
            "name_prefix": "",
            "owner_id": "060377381042",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ha_wp_efs"
            },
            "timeouts": null,
            "vpc_id": "vpc-075b39eab39fc4cb5"
          },
          "dependencies": [
            "aws_security_group.ha_wp_bastion",
            "aws_vpc.hawp"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ha_wp_site",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:060377381042:security-group/sg-08ae1ac03b168b4cd",
            "description": "Allow Apache inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08ae1ac03b168b4cd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "SSH from bastion",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05dc1411dcb50a740"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ha_wp_site",
            "name_prefix": "",
            "owner_id": "060377381042",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ha_wp_site"
            },
            "timeouts": null,
            "vpc_id": "vpc-075b39eab39fc4cb5"
          },
          "dependencies": [
            "aws_security_group.ha_wp_bastion",
            "aws_vpc.hawp"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ha_wp_priv1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:060377381042:subnet/subnet-0ca916868b05ff144",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.16.128.0/19",
            "id": "subnet-0ca916868b05ff144",
            "map_public_ip_on_launch": false,
            "owner_id": "060377381042",
            "tags": {
              "Name": "ha_wp_priv1"
            },
            "vpc_id": "vpc-075b39eab39fc4cb5"
          },
          "dependencies": [
            "aws_vpc.hawp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ha_wp_priv2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:060377381042:subnet/subnet-038953b690aab0708",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "172.16.160.0/19",
            "id": "subnet-038953b690aab0708",
            "map_public_ip_on_launch": false,
            "owner_id": "060377381042",
            "tags": {
              "Name": "ha_wp_priv2"
            },
            "vpc_id": "vpc-075b39eab39fc4cb5"
          },
          "dependencies": [
            "aws_vpc.hawp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ha_wp_priv3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:060377381042:subnet/subnet-035a8ffcb7223c255",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "172.16.192.0/19",
            "id": "subnet-035a8ffcb7223c255",
            "map_public_ip_on_launch": false,
            "owner_id": "060377381042",
            "tags": {
              "Name": "ha_wp_priv3"
            },
            "vpc_id": "vpc-075b39eab39fc4cb5"
          },
          "dependencies": [
            "aws_vpc.hawp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ha_wp_pub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:060377381042:subnet/subnet-0425b3d2a3a9a0c4e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.16.32.0/19",
            "id": "subnet-0425b3d2a3a9a0c4e",
            "map_public_ip_on_launch": true,
            "owner_id": "060377381042",
            "tags": {
              "Name": "ha_wp_pub1"
            },
            "vpc_id": "vpc-075b39eab39fc4cb5"
          },
          "dependencies": [
            "aws_vpc.hawp"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ha_wp_pub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:060377381042:subnet/subnet-0861e15df746d7dfe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.16.64.0/19",
            "id": "subnet-0861e15df746d7dfe",
            "map_public_ip_on_launch": true,
            "owner_id": "060377381042",
            "tags": {
              "Name": "ha_wp_pub2"
            },
            "vpc_id": "vpc-075b39eab39fc4cb5"
          },
          "dependencies": [
            "aws_vpc.hawp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ha_wp_pub3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:060377381042:subnet/subnet-03209511b13e03db5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.16.96.0/19",
            "id": "subnet-03209511b13e03db5",
            "map_public_ip_on_launch": true,
            "owner_id": "060377381042",
            "tags": {
              "Name": "ha_wp_pub3"
            },
            "vpc_id": "vpc-075b39eab39fc4cb5"
          },
          "dependencies": [
            "aws_vpc.hawp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "hawp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:060377381042:vpc/vpc-075b39eab39fc4cb5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-04455dd0a0fa9ca43",
            "default_route_table_id": "rtb-05d62da5aa0d27533",
            "default_security_group_id": "sg-085654d5520bd96bc",
            "dhcp_options_id": "dopt-89a876f3",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-075b39eab39fc4cb5",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-05d62da5aa0d27533",
            "owner_id": "060377381042",
            "tags": {
              "Name": "ha_wp"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}